[tool.poetry]
name = "openrlbenchmark"
version = "0.1.1a4"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
wandb = "^0.13.7"
pip = "^22.1.2"
expt = "^0.4.1"
multiprocess = "^0.70.13"
tueplots = "^0.0.4"
seaborn = "^0.12.1"
rich = "^12.6.0"
tabulate = "^0.9.0"
importlib-metadata = "^5.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
