[tool.poetry]
name = "openrlbenchmark"
version = "0.2.1a4"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [
    { include = "openrlbenchmark" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
wandb = "^0.13.7"
pip = "^22.1.2"
expt = "^0.4.1"
multiprocess = "^0.70.13"
tueplots = "^0.0.4"
seaborn = "^0.12.1"
rich = "<12.0"
tabulate = "^0.9.0"
importlib-metadata = "^5.1.0"
tqdm = "^4.65.0"
tyro = "^0.5.0"
dotmap = "^1.3.30"
peewee = "^3.16.2"
rliable = "^1.0.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
notebook = "^6.5.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
